fix background night and some property CSS

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
       <div class="foreground-rain"></div>
       <div class="frame"></div>
       <div class="modal">
-        <div class="modal-inner"
-        >Press the middle button to start
+        <div class="modal-inner">
+          <h3>START</h3><br/>Press the middle button.
       </div>
       </div>
       <div class="buttons">
